--- a/css/styles.css
+++ b/css/styles.css
@@ -57,9 +57,9 @@ header.sticky{position:fixed;z-index:999}
 #lead-down{position:absolute;left:0;right:0;width:100%;text-align:center;z-index:10;bottom:15px;color:#fff}
 #lead-down span{cursor:pointer;display:block;margin:0 auto;width:35px;height:35px;border-radius:50%;border:3px solid #a0cfee;text-align:center}
 #lead-down i{animation:pulsate 1.5s ease;animation-iteration-count:infinite;padding-top:5px}@keyframes pulsate{0%{transform:scale(1, 1)}50%{transform:scale(1.2, 1.2)}100%{transform:scale(1, 1)}}
-#about{padding:75px 15px;border-bottom:1px solid #dcd9d9;text-align:center}
+#about{padding:50px 15px;border-bottom:1px solid #dcd9d9;text-align:center}
 #about h2{color:#374054}
-#about p{color:#74808a;margin:0;text-align:center}
+#about p{color:#74808a;margin:40;text-align:center}
 #experience{padding:50px 15px;text-align:center;border-bottom:1px solid #dcd9d9}
 #experience h2{color:#374054}
 #experience-timeline{margin:30px auto 0 auto;position:relative;max-width:1000px}
@@ -139,6 +139,25 @@ header.sticky{position:fixed;z-index:999}
 .education-block span{float:none}
 .project-image{display:none}
 .project-info{position:relative;margin:0;padding:30px 15px;top:auto;transform:none}footer{text-align:center}
-.social{text-align:center}}@media only screen and (max-width: 480px){#lead-content h1{font-size:1.5em}
+.social{text-align:center}}
+@media only screen and (max-width: 480px){#lead-content h1{font-size:1.5em}
 #lead-content h2{font-size:1em}
 #lead-content a{font-size:0.9em;padding:5px 10px}}
+
+.wrapper {
+	width: 100%;
+}
+
+.about-info {
+	width: 100%;
+}
+
+.about-info p {
+	line-height: 24px;
+	text-align: center;
+}
+
+.img-profile {
+	max-width: 80%
+	padding-bottom: 30px;
+}
