--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ header.sticky{position:fixed;z-index:999}
 #lead-down i{animation:pulsate 1.5s ease;animation-iteration-count:infinite;padding-top:5px}@keyframes pulsate{0%{transform:scale(1, 1)}50%{transform:scale(1.2, 1.2)}100%{transform:scale(1, 1)}}
 #about{padding:50px 15px;border-bottom:1px solid #dcd9d9;text-align:center}
 #about h2{color:#374054}
-#about p{color:#74808a;margin:40;text-align:center}
+#about p{color:#74808a;margin:40;text-align:center;line-height:28px;font-size:1.2em;padding-left:12%;padding-right:12%}
 #experience{padding:50px 15px;text-align:center;border-bottom:1px solid #dcd9d9}
 #experience h2{color:#374054}
 #experience-timeline{margin:30px auto 0 auto;position:relative;max-width:1000px}
@@ -145,7 +145,7 @@ header.sticky{position:fixed;z-index:999}
 #lead-content a{font-size:0.9em;padding:5px 10px}}
 
 .wrapper {
-	width: 100%;
+    text-align: left;
 }
 
 .about-info {
@@ -160,4 +160,8 @@ header.sticky{position:fixed;z-index:999}
 .img-profile {
 	max-width: 80%
 	padding-bottom: 30px;
+}
+
+.highlights {
+    text-align: center;
 }
