--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body.active{overflow:hidden;z-index:-1}
 .no-js #experience-timeline>div{background:#fff;padding:10px;margin-bottom:10px;border:1px solid #dcd9d9}
 .no-js #experience-timeline>div h3{font-size:1.5em;font-weight:300;color:#374054;display:inline-block;margin:0}
 .no-js #experience-timeline>div h4{font-size:1.2em;font-weight:300;color:#7e8890;margin:0 0 15px 0}
-.no-js #experience-timeline>div p{color:#74808a;font-size:0.9em;margin:0}
+.no-js #experience-timeline>div p{color:#373c40;font-size:0.9em;margin:0}
 .no-js #experience-timeline:before,.no-js #experience-timeline:after{content:none}
 @keyframes dropHeader{0%{transform:translateY(-100%)}100%{transform:translateY(0)}}
 header{position:absolute;top:0;left:0;right:0;text-align:center;z-index:10;animation-name:dropHeader;animation-iteration-count:1;animation-timing-function:ease;animation-duration:0.75s}
@@ -32,14 +32,14 @@ header.sticky{position:fixed;z-index:999}
 #mobile-menu-close span{font-size:0.5em;text-transform:uppercase}
 #mobile-menu-close i{vertical-align:middle}footer{padding:50px 0}
 .copyright{padding-top:20px}
-.copyright p{margin:0;color:#74808a}
+.copyright p{margin:0;color:#373c40}
 .top{text-align:center}
 .top span{cursor:pointer;display:block;margin:15px auto 0 auto;width:35px;height:35px;border-radius:50%;border:3px solid #b9bfc4;text-align:center}
-.top i{color:#74808a}
+.top i{color:#373c40}
 .social{text-align:right}
 .social ul{margin:5px 0 0 0;padding:0}
 .social li{display:inline-block;font-size:1.25em;list-style:none}
-.social a{display:block;color:#74808a;padding:10px}
+.social a{display:block;color:#373c40;padding:10px}
 .social a:hover{color:#3498db}
 .btn-rounded-white{display:inline-block;color:#fff;padding:15px 25px;border:3px solid #fff;border-radius:30px;transition:.5s ease all}
 .btn-rounded-white:hover{color:#3498db;background:#fff;text-decoration:none}
@@ -59,7 +59,7 @@ header.sticky{position:fixed;z-index:999}
 #lead-down i{animation:pulsate 1.5s ease;animation-iteration-count:infinite;padding-top:5px}@keyframes pulsate{0%{transform:scale(1, 1)}50%{transform:scale(1.2, 1.2)}100%{transform:scale(1, 1)}}
 #about{padding:50px 15px;border-bottom:1px solid #dcd9d9;text-align:center}
 #about h2{color:#374054}
-#about p{color:#74808a;margin:40;text-align:center;line-height:28px;font-size:1.2em;padding-left:12%;padding-right:12%}
+#about p{color:#373c40;margin:40;text-align:center;line-height:28px;font-size:1.2em;padding-left:12%;padding-right:12%}
 #experience{padding:50px 15px;text-align:center;border-bottom:1px solid #dcd9d9}
 #experience h2{color:#374054}
 #experience-timeline{margin:30px auto 0 auto;position:relative;max-width:1000px}
@@ -68,7 +68,7 @@ header.sticky{position:fixed;z-index:999}
 .vtimeline-content{margin-left:350px;background:#fff;border:1px solid #e6e6e6;padding:15px;border-radius:3px;text-align:left}
 .vtimeline-content h3{font-size:1.5em;font-weight:300;color:#374054;display:inline-block;margin:0}
 .vtimeline-content h4{font-size:1.2em;font-weight:300;color:#7e8890;margin:0 0 15px 0}
-.vtimeline-content p{color:#74808a;font-size:0.9em;margin:0}
+.vtimeline-content p{color:#373c40;font-size:0.9em;margin:0}
 .vtimeline-point{position:relative;display:block;vertical-align:top;margin-bottom:30px}
 .vtimeline-icon{position:relative;color:#fff;width:50px;height:50px;background:#3498db;border-radius:50%;float:left;z-index:99;margin-left:280px}
 .vtimeline-icon i{display:block;font-size:2em;margin-top:10px}
@@ -77,9 +77,9 @@ header.sticky{position:fixed;z-index:999}
 #education h2{color:#374054;margin-bottom:50px}
 .education-block{max-width:700px;margin:0 auto 30px auto;padding:15px;border:1px solid #dcd9d9;text-align:left}
 .education-block h3{font-weight:500;float:left;margin:0;color:#374054}
-.education-block span{color:#74808a;float:right}
-.education-block h4{color:#74808a;clear:both;font-weight:500;margin:0 0 15px 0}
-.education-block p,.education-block ul{margin:0;color:#74808a;font-size:0.9em}
+.education-block span{color:#373c40;float:right}
+.education-block h4{color:#373c40;clear:both;font-weight:500;margin:0 0 15px 0}
+.education-block p,.education-block ul{margin:0;color:#373c40;font-size:0.9em}
 .education-block ul{padding:0 0 0 15px}
 #projects{padding:50px 15px;border-bottom:1px solid #dcd9d9;text-align:center}
 #projects h2{color:#374054;margin-bottom:50px}
@@ -87,7 +87,7 @@ header.sticky{position:fixed;z-index:999}
 .project-image{float:left}
 .project-info{position:absolute;top:50%;transform:translateY(-50%);margin-left:300px;padding:15px}
 .project-info h3{font-size:1.6em;font-weight:300;color:#374054;margin:0 0 15px 0}
-.project-info p{color:#74808a;margin:0 0 15px 0;font-size:1.0em}.no-image 
+.project-info p{color:#373c40;margin:0 0 15px 0;font-size:1.0em}.no-image 
 .project-info{position:relative;margin:0;padding:30px 15px;transform:none}
 #more-projects{display:none}
 #skills{padding:50px 15px;text-align:center}
@@ -116,9 +116,9 @@ header.sticky{position:fixed;z-index:999}
 .optional-section h2{color:#374054}
 .optional-section-block{max-width:700px;margin:0 auto 30px auto;padding:15px;border:1px solid #dcd9d9;background:#fff;text-align:left}
 .optional-section-block h3{font-weight:500;margin:0 0 15px 0;color:#374054}
-.optional-section-block h4{color:#74808a;clear:both;font-weight:500;margin:0 0 15px 0}
+.optional-section-block h4{color:#373c40;clear:both;font-weight:500;margin:0 0 15px 0}
 .optional-section-block p,
-.optional-section-block ul{margin:0 0 15px 0;color:#74808a;font-size:0.9em}
+.optional-section-block ul{margin:0 0 15px 0;color:#373c40;font-size:0.9em}
 .optional-section-block ul{padding:0 0 0 15px}@media only screen and (max-width: 750px){#experience-timeline:before,#experience-timeline:after{left:23px}
 .vtimeline-date{width:auto;text-align:left;position:relative;margin-bottom:15px;display:block;margin-left:70px}
 .vtimeline-icon{margin-left:0}
