--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,42 @@
-<!-- Parse the Latex divs with Katex-->
-<script type="text/javascript">
-  $("script[type='math/tex']").replaceWith(
-    function(){
-      var tex = $(this).text();
-      return katex.renderToString(tex, {displayMode: false});
-  });
-  
-  $("script[type='math/tex; mode=display']").replaceWith(
-    function(){
-      var tex = $(this).text();
-      return katex.renderToString(tex.replace(/%.*/g, ''), {displayMode: true});
-  });
-</script>
+<footer class="post-footer">
+
+    <!-- Parse the Latex divs with Katex-->
+    <script type="text/javascript">
+      $("script[type='math/tex']").replaceWith(
+        function(){
+          var tex = $(this).text();
+          return katex.renderToString(tex, {displayMode: false});
+      });
+      
+      $("script[type='math/tex; mode=display']").replaceWith(
+        function(){
+          var tex = $(this).text();
+          return katex.renderToString(tex.replace(/%.*/g, ''), {displayMode: true});
+      });
+    </script>
+
+    <!-- If we want to display author's name and bio -->
+    {% if site.author %}
+        <figure class="author-image">
+            <a class="img" href="{{ site.baseurl }}" style="background-image: url(/assets/images/profile.png)">
+            <span class="hidden">{{site.author}}'s Picture</span></a>
+        </figure>
+        <section class="author">
+            <!-- Author Name -->
+            <h4> {{ site.author }} </h4>
+            <!-- Author Bio -->
+            <p>
+                Here goes the author description. You might want to place some links too in here
+            </p>
+        </section>
+    {% endif %}
+
+    <!-- Share links section -->
+    {% include share.html %}
+
+    <!-- Disqus comments -->
+    {% if page.disqus %}
+        {% include disqus.html %}
+    {% endif %}
+
+</footer>
