--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,7 +26,7 @@
             <h4> {{ site.author }} </h4>
             <!-- Author Bio -->
             <p>
-                Here goes the author description. You might want to place some links too in here
+                Twitter: <a href="https://twitter.com/tianyu_lu">@Tianyu_Lu</a>
             </p>
         </section>
     {% endif %}
