--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,6 +27,7 @@
             <!-- Author Bio -->
             <p>
                 Twitter: <a href="https://twitter.com/tianyu_lu">@Tianyu_Lu</a>
+                <a href="/resume/resume.html">Resume</a>
             </p>
         </section>
     {% endif %}
